# main.go
@@ -4,6 +4,7 @@ import (
 	"database/sql"
 	"fmt"
 	"github.com/Port39/go-drink/items"
+	"github.com/Port39/go-drink/mailing"
 	"github.com/Port39/go-drink/session"
 	"github.com/Port39/go-drink/transactions"
 	"github.com/Port39/go-drink/users"
@@ -12,6 +13,7 @@ import (
 	"net/http"
 	"os"
 	"strconv"
+	"strings"
 	"time"
 )
 
@@ -19,6 +21,11 @@ type Config struct {
 	DbConnectionString string
 	Port               int
 	SessionLifetime    int
+	MailHost           string
+	MailPort           int
+	MailLogin          string
+	MailPassword       string
+	MailFrom           string
 }
 
 var config Config
@@ -50,10 +57,44 @@ func mkconf() Config {
 			log.Println(fmt.Sprintf("Error parsing session lifetime from env, defaulting to %d:", lifetime), err)
 		}
 	}
+	smtpserver, exists := os.LookupEnv("GODRINK_SMTPHOST")
+	var mailHost string
+	mailPort := 465
+	if !exists {
+		log.Println("No SMTP server given, mailing will fail!")
+	} else {
+		split := strings.Split(smtpserver, ":")
+		if len(split) != 2 {
+			log.Println("SMTP server must be specified as <host:port>, expect errors!")
+		} else {
+			mailHost = split[0]
+			mailPort, err = strconv.Atoi(split[1])
+			if err != nil {
+				log.Println("SMTP server must be specified as <host:port>, expect errors!")
+			}
+		}
+	}
+	mailLogin, exists := os.LookupEnv("GODRINK_SMTPUSER")
+	if !exists {
+		log.Println("No SMTP username given, mailing will likely fail!")
+	}
+	mailPass, exists := os.LookupEnv("GODRINK_SMTPPASS")
+	if !exists {
+		log.Println("No SMTP password given, mailing will likely fail!")
+	}
+	mailFrom, exists := os.LookupEnv("GODRINK_SMTPFROM")
+	if !exists {
+		mailFrom = mailLogin
+	}
 	return Config{
 		DbConnectionString: dbstring,
 		Port:               port,
 		SessionLifetime:    lifetime,
+		MailHost:           mailHost,
+		MailPort:           mailPort,
+		MailLogin:          mailLogin,
+		MailPassword:       mailPass,
+		MailFrom:           mailFrom,
 	}
 }
 
@@ -80,17 +121,36 @@ func initialize() {
 	if err != nil {
 		log.Fatal("Error creating auth table: ", err)
 	}
+	err = users.VerifyPasswordResetTableExists(database)
+	if err != nil {
+		log.Fatal("Error creating password reset token table: ", err)
+	}
 	err = transactions.VerifyTransactionTableExists(database)
 	if err != nil {
 		log.Fatal("Error creating transaction table: ", err)
 	}
-	sessionStore = session.NewMemoryStore()
-	cleanupTicker := time.NewTicker(time.Duration(config.SessionLifetime) * time.Second)
+	databaseCleanupTicker := time.NewTicker(4 * time.Hour)
 	go func() {
 		for {
 			select {
-			case t := <-cleanupTicker.C:
-				log.Println("Triggering session purge at:", t)
+			case t := <-databaseCleanupTicker.C:
+				log.Println("Starting Database Cleanup at:", t.Format(time.DateTime))
+				if err := users.CleanExpiredResetTokens(database); err != nil {
+					log.Println("Error while deleting expired password reset tokens:", err)
+				}
+			}
+		}
+	}()
+
+	mailing.Configure(config.MailLogin, config.MailPassword, config.MailHost, config.MailPort, config.MailFrom)
+
+	sessionStore = session.NewMemoryStore()
+	sessionCleanupTicker := time.NewTicker(time.Duration(config.SessionLifetime) * time.Second)
+	go func() {
+		for {
+			select {
+			case t := <-sessionCleanupTicker.C:
+				log.Println("Triggering session purge at:", t.Format(time.DateTime))
 				sessionStore.Purge()
 			}
 		}
@@ -113,6 +173,8 @@ func main() {
 	http.HandleFunc("POST /register/password", registerWithPassword)
 
 	http.HandleFunc("POST /auth/add", verifyRole("user", addAuthMethod))
+	http.HandleFunc("POST /auth/password-reset/request", requestPasswordReset)
+	http.HandleFunc("POST /auth/password-reset", resetPassword)
 
 	http.HandleFunc("POST /login/password", loginWithPassword)
 	http.HandleFunc("POST /login/cash", loginCash)
